--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
                             <a href="#"><i class="fas fa-search"></i></a>
                         </li>
                         <li>
-                            <a href="#">Log in</a>
+                            <a href="#" class="login">Log in</a>
                         </li>
                         <li>
-                            <a href="#">GetHubspotFree</a>
+                            <a href="#" id="button">GetHubspotFree</a>
                         </li>
                     </ul>
                 </div>
