--- a/index.html
+++ b/index.html
@@ -43,11 +43,32 @@
                 </div>
             </nav>
             <!--fine nav top-->
-            
+        </div>
+        <div class="container nav-bottom">
             <!--nav bottom-->
-            <nav class="bottom">
-                <div class="col logo"></div>
-                <div class="col menu"></div>
+            <nav class="wrap clearfix">
+                <div class="col menu-left logo">
+                    <img src="img/logo.svg" alt="">
+                </div>
+                <div class="col menu-right">
+                    <ul class="menu">
+                        <li>
+                            <a href="#">Software <i class="fas fa-chevron-down"></i></a>
+                        </li>
+                        <li>
+                            <a href="#">Pricing</a>
+                        </li>
+                        <li>
+                            <a href="#">Resources <i class="fas fa-chevron-down"></i></a>
+                        </li>
+                        <li>
+                            <a href="#">Partners <i class="fas fa-chevron-down"></i></a>
+                        </li>
+                        <li>
+                            <a href="#">About <i class="fas fa-chevron-down"></i></a>
+                        </li>
+                    </ul>
+                </div>
             </nav>
             <!--fine nav bottom-->
         </div>
