--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@
 <body>
     <!--HEADER-->
     <header>
+
+        <!--nav top-->
         <div class="container nav-top">
-            <!--nav top-->
             <nav class="wrap clearfix">
+
+                <!--nav top right-->
                 <div class="col menu-left">
                     <ul class="menu">
                         <li>
@@ -28,6 +31,9 @@
                         </li>
                     </ul>
                 </div>
+                <!--fine nav top right-->
+
+                <!--nav top left-->
                 <div class="col menu-right">
                     <ul class="menu">
                         <li>
@@ -42,14 +48,21 @@
                     </ul>
                 </div>
             </nav>
-            <!--fine nav top-->
         </div>
+        <!--fine nav top left-->
+        <!--fine nav top-->
+
+        <!--nav bottom-->
         <div class="container nav-bottom">
-            <!--nav bottom-->
             <nav class="wrap clearfix">
+
+                <!--nav bottom right-->
                 <div class="col menu-left logo">
                     <img src="img/logo.svg" alt="">
                 </div>
+                <!--fine nav bottom right-->
+
+                <!--nav bottom left-->
                 <div class="col menu-right">
                     <ul class="menu">
                         <li>
@@ -70,14 +83,29 @@
                     </ul>
                 </div>
             </nav>
-            <!--fine nav bottom-->
+        </div>
+        <!--nav bottom left-->
+        <!--fine nav bottom-->
+
+        <!--banner-->
+        <div class="banner">
+            <img class="img" src="img/jumbotron.png" alt="">
+            <div class="wrap">
+                <div class="teaser">
+                    <h1>There’s a better way to grow.</h1>
+                    <p class="text">Marketing, sales, and service software that helps your business grow without compromise. Because “good for the business” should also mean “good for the customer.”</p>
+                    <a href="#" id="button">GetHubspotFree</a>
+                    <p class="subtext">Get started with FREE tools, and upgrade as you grow</p>
+                </div>
+            </div>
         </div>
     </header>
     <!--FINE HEADER-->
 
     <!--MAIN-->
     <main>
-        <div class="container50"></div>
+        <div class="container50">
+        </div>
     </main>
     <!--FINE MAIN-->
 
