section light green

--- a/index.html
+++ b/index.html
@@ -99,6 +99,11 @@
                 </div>
             </div>
         </div>
+        <!--fine banner-->
+
+        <!--section light green-->
+        <div class="light-green"></div>
+        <!--fine section light green-->
     </header>
     <!--FINE HEADER-->
 
