--- a/index.html
+++ b/index.html
@@ -108,7 +108,18 @@
 
     <!--MAIN-->
     <main>
-        <div class="container50">
+        <div class="central-section">
+            <div class="wrap">
+                <div class="first-subsection">
+                    <div class="illustration">
+                        <img src="img/integrations_illustration.webp" alt="">
+                    </div>
+                    <div class="text-subsection">
+                        <h2>Powerful Alone. Better Togheter</h2>
+                        <p class="text">HubSpot’s CRM platform has all the tools and integrations you need for marketing, sales, content management, and customer service. Each product in the platform is powerful alone, but the real magic happens when you use them together</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
     <!--FINE MAIN-->
