--- a/index.html
+++ b/index.html
@@ -110,15 +110,47 @@
     <main>
         <div class="central-section">
             <div class="wrap">
-                <div class="first-subsection">
-                    <div class="illustration">
-                        <img src="img/integrations_illustration.webp" alt="">
-                    </div>
-                    <div class="text-subsection">
-                        <h2>Powerful Alone. Better Togheter</h2>
-                        <p class="text">HubSpot’s CRM platform has all the tools and integrations you need for marketing, sales, content management, and customer service. Each product in the platform is powerful alone, but the real magic happens when you use them together</p>
+                <!--first subsection-->
+                <div class="wrap2">
+                    <div class="first-subsection">
+                        <div class="illustration">
+                            <img src="img/integrations_illustration.webp" alt="">
+                        </div>
+                        <div class="text-subsection">
+                            <h2>Powerful Alone. Better Togheter</h2>
+                            <p class="text">HubSpot’s CRM platform has all the tools and integrations you, content management, and customer service. Each product in the platform is powerful alone, but you use them together</p>
+                        </div>
                     </div>
                 </div>
+                <!--end first subsection-->
+
+                <!--second subsection-->
+                <div class="second-subsection">
+                    <div class="wrap2 clearfix">
+                        <!--section left-->
+                        <div class="col menu-left">
+                            <div class="book">
+                                <img src="img/crm-Illustration.svg" alt="">
+                            </div>
+                            <a href="#" id="button">GetHubspotFree</a>
+                        </div>
+                        <!--end section left-->
+
+                        <!--section right-->
+                        <div class="col menu-right">
+                            <h3>Free HubSpot CRM</h3>
+                            <p class="text">Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campaigns at scale.</p>
+                            <h4>POPOLAR FEATURE <span class="line"></span></h4>
+                            <ul class="list">
+                                <li><i class="fas fa-check-circle"></i> Contact Insight</li>
+                                <li><i class="fas fa-check-circle"></i> Deals</li>
+                                <li><i class="fas fa-check-circle"></i> Task</li>
+                            </ul>
+                        </div>
+                        <!--end section right-->
+                    </div>
+                </div>
+                <!--end second subsection-->
             </div>
         </div>
     </main>
