--- a/index.html
+++ b/index.html
@@ -152,22 +152,35 @@
                 </div>
                 <!--end second subsection-->       
             </div>
+            
             <div class="third-subsection">
                 <div class="wrap clearfix">
                     <div class="col menu-left">
                         <div class="illustration">
                             <img src="img/marketing-hub-free.svg" alt="">
                         </div>
+                        <h3>Marketing Hub</h3>
+                        <p class="text">Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campaigns at scale.</p>
+                        <span class="line"></span>
+                        <h4>POPOLAR FEATURE</h4>
                     </div>
                     <div class="col menu-central">
                         <div class="illustration">
-                            <img src="img/marketing-hub-free.svg" alt="">
+                            <img src="img/sales-professional-illustration.svg" alt="">
                         </div>
+                        <h3>Sales Hub</h3>
+                        <p class="text">Sales CRM software to help you get deeper insights into prospects, automate the tasks you hate, and close more deals faster.</p>
+                        <span class="line"></span>
+                        <h4>POPOLAR FEATURE</h4>
                     </div>
                     <div class="col menu-right">
                         <div class="illustration">
-                            <img src="img/marketing-hub-free.svg" alt="">
+                            <img src="img/service-hub-illustration.svg" alt="">
                         </div>
+                        <h3>Service Hub</h3>
+                        <p class="text">Customer service software to help you connect with customers, exceed expectations, and turn them into promoters who grow your business.</p>
+                        <span class="line"></span>
+                        <h4>POPOLAR FEATURE</h4>
                     </div>
                 </div>
             </div> 
