--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                             <div class="book">
                                 <img src="img/crm-Illustration.svg" alt="">
                             </div>
-                            <a href="#" id="button">GetHubspotFree</a>
+                            <a href="#" id="button-learn">Learn More</a>
                         </div>
                         <!--end section left-->
 
@@ -153,8 +153,10 @@
                 <!--end second subsection-->       
             </div>
             
+            <!--third subsection-->
             <div class="third-subsection">
                 <div class="wrap clearfix">
+                    <!--third subsection left-->
                     <div class="col menu-left">
                         <div class="illustration">
                             <img src="img/marketing-hub-free.svg" alt="">
@@ -163,7 +165,16 @@
                         <p class="text">Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campaigns at scale.</p>
                         <span class="line"></span>
                         <h4>POPOLAR FEATURE</h4>
+                        <ul class="list">
+                            <li><i class="fas fa-check-circle"></i> Lead generation</li>
+                            <li><i class="fas fa-check-circle"></i> Marketing automation</li>
+                            <li><i class="fas fa-check-circle"></i> Analytics</li>
+                        </ul>
+                        <a href="#" id="button-learn">Learn More</a>
                     </div>
+                    <!--end third subsection left-->
+
+                    <!--third subsection central-->
                     <div class="col menu-central">
                         <div class="illustration">
                             <img src="img/sales-professional-illustration.svg" alt="">
@@ -172,7 +183,16 @@
                         <p class="text">Sales CRM software to help you get deeper insights into prospects, automate the tasks you hate, and close more deals faster.</p>
                         <span class="line"></span>
                         <h4>POPOLAR FEATURE</h4>
+                        <ul class="list">
+                            <li><i class="fas fa-check-circle"></i> Advanced CRM</li>
+                            <li><i class="fas fa-check-circle"></i> Meeting scheduling</li>
+                            <li><i class="fas fa-check-circle"></i> Quotes</li>
+                        </ul>
+                        <a href="#" id="button-learn">Learn More</a>
                     </div>
+                    <!--end third subsection central-->
+
+                    <!--third subsection right-->
                     <div class="col menu-right">
                         <div class="illustration">
                             <img src="img/service-hub-illustration.svg" alt="">
@@ -181,9 +201,20 @@
                         <p class="text">Customer service software to help you connect with customers, exceed expectations, and turn them into promoters who grow your business.</p>
                         <span class="line"></span>
                         <h4>POPOLAR FEATURE</h4>
+                        <ul class="list">
+                            <li><i class="fas fa-check-circle"></i> Tickets</li>
+                            <li><i class="fas fa-check-circle"></i> Customer feedback</li>
+                            <li><i class="fas fa-check-circle"></i> Knowledge base</li>
+                        </ul>
+                        <a href="#" id="button-learn">Learn More</a>
                     </div>
+                    <!--end third subsection right-->
                 </div>
+                <!--aaaaaaaaa-->
+
+                <div class="fourth-subsection"></div>
             </div> 
+            <!--end third subsection-->
         </div>
     </main>
     <!--FINE MAIN-->
