--- a/index.html
+++ b/index.html
@@ -210,11 +210,18 @@
                     </div>
                     <!--end third subsection right-->
                 </div>
-                <!--aaaaaaaaa-->
-
-                <div class="fourth-subsection"></div>
             </div> 
             <!--end third subsection-->
+
+            <!--fourth subsection-->
+            <div class="fourth-subsection">
+                <div id="grad1">
+                    <div class="wrap">
+                        <h2>Learn and grow with award-winning support and a thriving community behind you.</h2>
+                    </div>
+                    
+                </div>
+            </div>
         </div>
     </main>
     <!--FINE MAIN-->
