--- a/index.html
+++ b/index.html
@@ -218,6 +218,7 @@
                 <div id="grad1">
                     <div class="wrap">
                         <h2>Learn and grow with award-winning support and a thriving community behind you.</h2>
+                        <p class="text">You don't have to go it alone. Master the inbound methodology and get the most out of your tools with HubSpot's legendary customer support team and a community of thousands of marketing and sales pros just like you.</p>
                     </div>
                     
                 </div>
