--- a/index.html
+++ b/index.html
@@ -219,9 +219,125 @@
                     <div class="wrap">
                         <h2>Learn and grow with award-winning support and a thriving community behind you.</h2>
                         <p class="text">You don't have to go it alone. Master the inbound methodology and get the most out of your tools with HubSpot's legendary customer support team and a community of thousands of marketing and sales pros just like you.</p>
+                        <div class="grid">
+
+                            <!--grid top-->
+                            <div class="grid-top">
+                                <div class="clearfix">
+
+                                    <!--cell one-->
+                                    <div class="col cell-one">
+                                        <div class="icon">
+                                            <img src="img/homepage_community_agency.svg" alt="">
+                                            <div class="grid-text">
+                                                <p class="grid-number">150<span class="più"> +</span></p>
+                                                <p class="cell-text">HubSpot user groups</p> 
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <!--end cell one-->
+
+                                    <!--cell two-->
+                                    <div class="col cell-two">
+                                        <div class="icon">
+                                            <img src="img/homepage_community_blog.svg" alt="">
+                                            <div class="grid-text">
+                                                <p class="grid-number">4.5M<span class="più"> +</span></p>
+                                                <p class="cell-text">monthly visits</p> 
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <!--end cell two-->
+
+                                    <!--cell three-->
+                                    <div class="col cell-three">
+                                        <div class="icon">
+                                            <img src="img/homepage_community_academy.svg" alt="">
+                                            <div class="grid-text">
+                                                <p class="grid-number">155K<span class="più"> +</span></p>
+                                                <p class="cell-text">certified professionals</p> 
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <!--end cell three-->
+
+                                    <!--cell four-->
+                                    <div class="col cell-four">
+                                        <div class="icon">
+                                            <img src="img/homepage_community_inbound.svg" alt="">
+                                            <div class="grid-text">
+                                                <p class="grid-number">21K<span class="più"> +</span></p>
+                                                <p class="cell-text">registered attendees</p> 
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <!--end cell four-->
+                                </div>
+                            </div>
+                            <!-- fine grid top-->
+
+                            <!-- grid bottom-->
+                            <div class="grid-bottom">
+                                <div class="clearfix">
+
+                                    <!--cell one-->
+                                    <div class="col cell-one">
+                                        <div class="icon">
+                                            <img src="img/homepage_community_connect.svg" alt="">
+                                            <div class="grid-text">
+                                                <p class="grid-number">200<span class="più"> +</span></p>
+                                                <p class="cell-text">integrations</p> 
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <!--end cell one-->
+
+                                    <!--cell two-->
+                                    <div class="col cell-two">
+                                        <div class="icon">
+                                            <img src="img/homepage_community_globe.svg" alt="">
+                                            <div class="grid-text">
+                                                <p class="grid-number">6<span class="più"> +</span></p>
+                                                <p class="cell-text">languages</p> 
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <!--end cell two-->
+
+                                    <!--cell three-->
+                                    <div class="col cell-three">
+                                        <div class="icon">
+                                            <img src="img/homepage_community_followers.svg" alt="">
+                                            <div class="grid-text">
+                                                <p class="grid-number">2.6M<span class="più"> +</span></p>
+                                                <p class="cell-text">csocial followers</p> 
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <!--end cell three-->
+
+                                    <!--cell four-->
+                                    <div class="col cell-four">
+                                        <div class="icon">
+                                            <img src="img/growthhub-white-small-1.svg" alt="">
+                                            <div class="grid-text">
+                                                <p class="grid-number">5K<span class="più"> +</span></p>
+                                                <p class="cell-text">profile and counting</p> 
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <!--end cell four-->
+                                </div>
+                            </div>
+                            <!-- fine grid bottom-->
+                        </div>
                     </div>
                 </div>
             </div>
+            <!-- end fourth subsection-->
+
+            <!--fith subsection-->
+
         </div>
     </main>
     <!--FINE MAIN-->
