--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                                         <div class="icon">
                                             <img src="img/homepage_community_agency.svg" alt="">
                                             <div class="grid-text">
-                                                <p class="grid-number">150<span class="più"> +</span></p>
+                                                <p class="grid number">150<span class="più"> +</span></p>
                                                 <p class="cell-text">HubSpot user groups</p> 
                                             </div>
                                         </div>
@@ -242,7 +242,7 @@
                                         <div class="icon">
                                             <img src="img/homepage_community_blog.svg" alt="">
                                             <div class="grid-text">
-                                                <p class="grid-number">4.5M<span class="più"> +</span></p>
+                                                <p class="grid number">4.5M<span class="più"> +</span></p>
                                                 <p class="cell-text">monthly visits</p> 
                                             </div>
                                         </div>
@@ -254,7 +254,7 @@
                                         <div class="icon">
                                             <img src="img/homepage_community_academy.svg" alt="">
                                             <div class="grid-text">
-                                                <p class="grid-number">155K<span class="più"> +</span></p>
+                                                <p class="grid number">155K<span class="più"> +</span></p>
                                                 <p class="cell-text">certified professionals</p> 
                                             </div>
                                         </div>
@@ -266,7 +266,7 @@
                                         <div class="icon">
                                             <img src="img/homepage_community_inbound.svg" alt="">
                                             <div class="grid-text">
-                                                <p class="grid-number">21K<span class="più"> +</span></p>
+                                                <p class="grid number">21K<span class="più"> +</span></p>
                                                 <p class="cell-text">registered attendees</p> 
                                             </div>
                                         </div>
@@ -285,7 +285,7 @@
                                         <div class="icon">
                                             <img src="img/homepage_community_connect.svg" alt="">
                                             <div class="grid-text">
-                                                <p class="grid-number">200<span class="più"> +</span></p>
+                                                <p class="grid number">200<span class="più"> +</span></p>
                                                 <p class="cell-text">integrations</p> 
                                             </div>
                                         </div>
@@ -297,7 +297,7 @@
                                         <div class="icon">
                                             <img src="img/homepage_community_globe.svg" alt="">
                                             <div class="grid-text">
-                                                <p class="grid-number">6<span class="più"> +</span></p>
+                                                <p class="grid number">6<span class="più"> +</span></p>
                                                 <p class="cell-text">languages</p> 
                                             </div>
                                         </div>
@@ -309,7 +309,7 @@
                                         <div class="icon">
                                             <img src="img/homepage_community_followers.svg" alt="">
                                             <div class="grid-text">
-                                                <p class="grid-number">2.6M<span class="più"> +</span></p>
+                                                <p class="grid number">2.6M<span class="più"> +</span></p>
                                                 <p class="cell-text">csocial followers</p> 
                                             </div>
                                         </div>
@@ -321,7 +321,7 @@
                                         <div class="icon">
                                             <img src="img/growthhub-white-small-1.svg" alt="">
                                             <div class="grid-text">
-                                                <p class="grid-number">5K<span class="più"> +</span></p>
+                                                <p class="grid number">5K<span class="più"> +</span></p>
                                                 <p class="cell-text">profile and counting</p> 
                                             </div>
                                         </div>
@@ -336,7 +336,51 @@
             </div>
             <!-- end fourth subsection-->
 
-            <!--fith subsection-->
+            <!--fifth subsection-->
+            <div class="fifth-subsection">
+                <div class="wrap">
+                    <div class="wrap2 clearfix">
+                        <!--section left-->
+                        <div class="col menu-left">
+                            <p class="number">64,500</p>
+                            <p class="text">customers in over 100 countes growing their businesses with HubSpot</p>
+                        </div>
+                        <!--end section left-->
+
+                        <!--section right-->
+                        <div class="col menu-right">
+                            <ul class="list-loghi">
+                                <li>
+                                    <img src="img/atlassian-horizontal-blue.webp" alt="">
+                                </li>  
+                                <li>
+                                    <img src="img/doordash_owler.webp" alt="">
+                                </li>  
+                                <li>
+                                    <img src="img/g2crowd-logo.webp" alt="">
+                                </li>  
+                                <li>
+                                    <img src="img/purple-logo.webp" alt="">
+                                </li> 
+                                <li>
+                                    <img src="img/subaru_logo.webp" alt="">
+                                </li>  
+                                <li>
+                                    <img src="img/wistia_logo.webp" alt="">
+                                </li>  
+                                <li>
+                                    <img src="img/classpass-logo.webp" alt="">
+                                </li>  
+                                <li>
+                                    <img src="img/vmware_logo_gry_rgb_300dpi.webp" alt="">
+                                </li>  
+                            </ul>
+                        </div>
+                        <!--end section right-->
+                    </div>    
+                </div>
+            </div>
+            <!--end fifth subsection-->
 
         </div>
     </main>
