--- a/index.html
+++ b/index.html
@@ -382,6 +382,21 @@
             </div>
             <!--end fifth subsection-->
 
+            <!--sixth subsection-->
+            <div class="sixth-subsection">
+                <div class="wrap clearfix">
+                    <div class="col menu-left">
+                        <h3>Start Growing With HubSpot Today</h3>
+                        <p class="text">Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campaigns at scale.</p>
+                        <a href="#" id="button">GetHubspotFree</a>
+                        <p class="subtext">Get started with FREE tools, and upgrade as you grow</p>
+                    </div>
+                    <div class="col menu-right">
+                        <img src="img/woman.webp " alt="">
+                    </div>
+                </div>
+            </div>
+            <!--end sixth subsection-->
         </div>
     </main>
     <!--FINE MAIN-->
