prima riga footer

--- a/index.html
+++ b/index.html
@@ -405,6 +405,63 @@
 
     <!--FOOTER-->
     <footer>
+        <div class="final-section">
+        <!--first line-->
+        <div class="first-line">
+            <div class="wrap clearfix">
+                <div class="col column-one">
+                    <ul class="list">
+                        <li class="first">Increase Your Traffic</li>
+                        <li>Add Software</li>
+                        <li>Blog Software</li>
+                        <li>SEO Software</li>
+                        <li>Social Media Software</li>
+                        <li>Content Management System</li>
+                    </ul>
+                </div>
+                <div class="col column-two">
+                    <ul class="list">
+                        <li class="first">Connect Whit Leads</li>
+                        <li>Finde New Prospects</li>
+                        <li>Email Tracking</li>
+                        <li>Sales Email Templates</li>
+                        <li>Click to Call Your Leads</li>
+                        <li>Email Marketing</li>
+                    </ul>
+                </div>
+                <div class="col column-three">
+                    <ul class="list">
+                        <li class="first">Close and Menage Leads</li>
+                        <li>Document Traking Tool</li>
+                        <li>Meeting Schedule Tool</li>
+                        <li>Sales Automatic Tool</li>
+                        <li>Leads Management Tool</li>
+                        <li>Pipeline Management Tool</li>
+                    </ul>
+                </div>
+                <div class="col column-four">
+                    <ul class="list">
+                        <li class="first">Support and Tools</li>
+                        <li>Hubspot Partners</li>
+                        <li>Join a Local User Group</li>
+                        <li>Get a Free Website Report</li>
+                        <li>Hubspot Templates</li>
+                        <li>Free Tool & Genertors</li>
+                        <a href="#" id="button">Contact GetHubspotFree</a>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <!--end first line-->
+
+        <!--second line-->
+        <div class="second-line "></div>
+        <!--end second line-->
+
+        <!--third line-->
+        <div class="third-line "></div>
+         <!--end third line-->
+        </div>
     </footer>
     <!--FINE FOOTER-->
 </body>
