fine prima parte footer

--- a/index.html
+++ b/index.html
@@ -447,8 +447,19 @@
                         <li>Get a Free Website Report</li>
                         <li>Hubspot Templates</li>
                         <li>Free Tool & Genertors</li>
-                        <a href="#" id="button">Contact GetHubspotFree</a>
                     </ul>
+                    <div>
+                        <a href="#" id="button">Contact Hubspot Support</a>
+                    </div>
+                    <nav class="social">
+                        <ul>
+                            <li><i class="fab fa-facebook-f"></i></li>
+                            <li><i class="fab fa-instagram"></i></li>
+                            <li><i class="fab fa-youtube"></i></li>
+                            <li><i class="fab fa-twitter"></i></li>
+                            <li><i class="fab fa-linkedin-in"></i></li>
+                        </ul>
+                    </nav>
                 </div>
             </div>
         </div>
